--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chain3",
   "namespace": "MOAC",
-  "version": "0.1.2",
+  "version": "0.1.0",
   "description": "MOAC JavaScript API, middleware to talk to a MOAC node over RPC",
   "main": "./index.js",
   "directories": {
@@ -23,26 +23,26 @@
   "devDependencies": {
     "bignumber.js": "^2.0.7",
     "bower": ">=1.4.1",
-    "browserify": ">=10.0",
+    "browserify": "^16.1.1",
     "browserify-cryptojs": "^0.3.1",
     "chai": "^3.0.0",
     "coveralls": "^2.11.2",
-    "del": ">=2.0.2",
+    "del": "^3.0.0",
     "exorcist": "^0.4.0",
     "gulp": "^3.9.1",
-    "gulp-jshint": ">=1.5.0",
-    "gulp-rename": ">=1.2.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.3",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": ">=1.2.0",
+    "gulp-uglify": "^3.0.0",
+    "hash.js": "^1.0.0",
     "istanbul": "^0.4.4",
-    "jshint": ">=2.5.0",
+    "jshint": "^2.9.5",
     "jszip": "^2.5.0",
     "keccak": "^1.0.2",
     "localstorejs": "^0.1.9",
     "mocha": ">=2.3.3",
     "node-safe-filesaver": "^0.1.0",
-    "hash.js": "^1.0.0",
     "rlp": "^2.0.0",
     "sandboxed-module": "^2.0.2",
     "secp256k1": "^3.0.1",
