prepare for 1.0.0 test, need to update docs

--- a/package.json
+++ b/package.json
@@ -1,79 +1,54 @@
 {
   "name": "chain3",
   "namespace": "MOAC",
-  "version": "0.1.0",
-  "description": "MOAC JavaScript API, middleware to talk to a MOAC node over RPC",
-  "main": "./index.js",
+  "version": "1.0.0",
+  "description": "MOAC JavaScript API, middleware to talk to MOAC vnode and scs over RPC",
+  "main": "./packages/chain3/src/index.js",
   "directories": {
-    "lib": "./lib",
-    "test": "test",
-    "example": "examples"
+    "docs": "./docs",
+    "test": "./test"
   },
   "dependencies": {
-    "bignumber.js": "git+https://github.com/frozeman/bignumber.js-nolookahead.git",
-    "crypto-js": "^3.1.4",
-    "utf8": "^2.1.1",
-    "xhr2": "*",
-    "base-x": "*",
-    "xmlhttprequest": "*"
-  },
-  "browser": {
-    "xmlhttprequest": "./lib/utils/browser-xhr.js"
+    "web3": "^1.2.1"
   },
   "devDependencies": {
-    "bignumber.js": "^2.0.7",
-    "bower": ">=1.4.1",
-    "browserify": "^16.1.1",
-    "browserify-cryptojs": "^0.3.1",
-    "chai": "^3.0.0",
-    "coveralls": "^2.11.2",
-    "del": "^3.0.0",
-    "exorcist": "^0.4.0",
-    "gulp": "^3.9.1",
+    "bower": "^1.8.8",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^6.1.3",
     "gulp-jshint": "^2.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.3",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^3.0.0",
-    "hash.js": "^1.0.0",
-    "istanbul": "^0.4.4",
-    "jshint": "^2.9.5",
-    "jszip": "^2.5.0",
-    "keccak": "^1.0.2",
-    "localstorejs": "^0.1.9",
-    "mocha": ">=2.3.3",
-    "node-safe-filesaver": "^0.1.0",
-    "rlp": "^2.0.0",
-    "sandboxed-module": "^2.0.2",
-    "secp256k1": "^3.0.1",
-    "underscore": "^1.8.3",
-    "vinyl-source-stream": "^1.1.0"
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^0.6.1",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^3.0.2",
+    "mocha": "^6.1.4",
+    "chai": "^4.2.0"
   },
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
+    "docs": "cd docs; make html;",
     "test": "mocha",
     "test-coveralls": "istanbul cover _mocha -- -R spec && cat coverage/lcov.info | coveralls --verbose"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/innowells/Chain3/releases"
+    "url": "https://github.com/MOACChain/chain3/releases"
   },
-  "homepage": "https://github.com/innowells/Chain3",
+  "homepage": "https://github.com/MOACChain/chain3",
   "bugs": {
-    "url": "https://github.com/innowells/Chain3/issues"
+    "url": "https://github.com/MOACChain/chain3/issues"
   },
   "keywords": [
     "MOAC",
     "javascript",
     "API"
   ],
-  "author": "moac.io",
+  "author": "MOAC Tech",
   "authors": [
     {
-      "name": "MOAC lab",
+      "name": "MOAC Tech Inc.",
       "email": "support@moac.io",
-      "url": "https://github.com/innowells/Chain3"
+      "url": "https://github.com/MOACChain/chain3"
     }
   ],
   "license": "LGPL-3.0"
