--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.2",
     "mocha": "^6.1.4",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "bignumber.js": "^4.0.0",
+    "crypto-js": "^3.1.9-1",
+    "sandboxed-module": "^2.0.3"
   },
   "scripts": {
     "build": "gulp",
