--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "chain3",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "MOAC JavaScript API",
   "main": "dist/chain3.js",
   "dependencies": {
@@ -22,7 +22,7 @@
   ],
   "authors": [
     {
-      "name": "MOAC lab",
+      "name": "MOAC Tech Inc.",
       "email": "info@moac.io",
       "homepage": "https://github.com/innowells"
     }
