--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chain3",
   "namespace": "MOAC",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "MOAC JavaScript API, middleware to talk to MOAC vnode and scs over RPC",
   "main": "./packages/chain3/src/index.js",
   "directories": {
@@ -12,7 +12,13 @@
     "web3": "^1.2.1"
   },
   "devDependencies": {
+    "bignumber.js": "^4.0.0",
     "bower": "^1.8.8",
+    "browserify": "^16.5.0",
+    "chai": "^4.2.0",
+    "crypto-js": "^3.1.9-1",
+    "del": "^5.1.0",
+    "exorcist": "^1.0.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^6.1.3",
     "gulp-jshint": "^2.1.0",
@@ -20,11 +26,10 @@
     "gulp-replace": "^0.6.1",
     "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^3.0.2",
+    "jshint": "^2.11.0",
     "mocha": "^6.1.4",
-    "chai": "^4.2.0",
-    "bignumber.js": "^4.0.0",
-    "crypto-js": "^3.1.9-1",
-    "sandboxed-module": "^2.0.3"
+    "sandboxed-module": "^2.0.3",
+    "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
     "build": "gulp",
