--- a/packages/chain3-core-method/package.json
+++ b/packages/chain3-core-method/package.json
@@ -1,8 +1,8 @@
 {
     "name": "chain3-core-method",
     "version": "1.2.1",
-    "description": "Creates the methods on the web3 modules. This is an internal package.",
-    "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-core-method",
+    "description": "Creates the methods on the chain3 modules. This is an internal package.",
+    "repository": "https://github.com/MOACChain/chain3/tree/1.x/packages/chain3-core-method",
     "license": "LGPL-3.0",
     "engines": {
         "node": ">=8.0.0"
