--- a/packages/chain3-mc-ens/package.json
+++ b/packages/chain3-mc-ens/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "web3-eth-ens",
+    "name": "chain3-mc-ens",
     "version": "1.2.1",
     "description": "ENS support for web3.",
-    "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/web3-eth-ens",
+    "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/chain3-mc-ens",
     "license": "LGPL-3.0",
     "engines": {
         "node": ">=8.0.0"
