--- a/packages/chain3-scs/package.json
+++ b/packages/chain3-scs/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "chain3-mc",
+    "name": "chain3-scs",
     "version": "1.0.0",
-    "description": "chain3 module to interact with the MOAC blockchain and smart contracts.",
-    "repository": "https://github.com/MOACChain/chain3/tree/1.x/packages/chain3-mc",
+    "description": "chain3 module to interact with the MOAC SCS server and AppChains.",
+    "repository": "https://github.com/MOACChain/chain3/tree/1.x/packages/chain3-scs",
     "license": "LGPL-3.0",
     "engines": {
         "node": ">=8.0.0"
@@ -15,7 +15,7 @@
         "web3-core-method": "1.2.1",
         "web3-core-subscriptions": "1.2.1",
         "web3-eth-abi": "1.2.1",
-        "chain3-mc-contract": "1.0.0",
+        "chain3-mc-contract": "1.2.1",
         "chain3-mc-ens": "1.2.1",
         "web3-eth-iban": "1.2.1",
         "web3-eth-personal": "1.2.1",
