Added LICENSE file and update the gulp build script

--- a/packages/chain3-scs/package.json
+++ b/packages/chain3-scs/package.json
@@ -12,11 +12,12 @@
         "underscore": "1.9.1",
         "web3-core": "1.2.1",
         "web3-core-helpers": "1.2.1",
-        "web3-core-method": "1.2.1",
+        "chain3-core-method": "*",
         "web3-core-subscriptions": "1.2.1",
         "web3-eth-abi": "1.2.1",
-        "chain3-mc-contract": "1.2.1",
-        "chain3-mc-ens": "1.2.1",
+        "chain3-mc-contract": "*",
+        "chain3-mc-ens": "*",
+        "chain3-mc": "*",
         "web3-eth-iban": "1.2.1",
         "web3-eth-personal": "1.2.1",
         "web3-net": "1.2.1",
