--- a/package.json
+++ b/package.json
@@ -4,33 +4,21 @@
   "version": "1.0.1",
   "description": "MOAC JavaScript API, middleware to talk to MOAC vnode and scs over RPC",
   "main": "./packages/chain3/src/index.js",
+  "license": "LGPL-3.0",
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "directories": {
-    "docs": "./docs",
+    "doc": "./doc",
     "test": "./test"
   },
-  "dependencies": {
-    "web3": "^1.2.1"
-  },
-  "devDependencies": {
-    "bignumber.js": "^4.0.0",
-    "bower": "^1.8.8",
-    "browserify": "^16.5.0",
-    "chai": "^4.2.0",
-    "crypto-js": "^3.1.9-1",
-    "del": "^5.1.0",
-    "exorcist": "^1.0.1",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^6.1.3",
-    "gulp-jshint": "^2.1.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-replace": "^0.6.1",
-    "gulp-streamify": "^1.0.2",
-    "gulp-uglify": "^3.0.2",
-    "jshint": "^2.11.0",
-    "mocha": "^6.1.4",
-    "sandboxed-module": "^2.0.3",
-    "vinyl-source-stream": "^2.0.0"
-  },
+  "bundlesize": [
+    {
+      "path": "./packages/chain3/dist/chain3.min.js",
+      "maxSize": "1.5 mB",
+      "compression": "none"
+    }
+  ],
   "scripts": {
     "build": "gulp",
     "watch": "gulp watch",
@@ -59,5 +47,28 @@
       "url": "https://github.com/MOACChain/chain3"
     }
   ],
-  "license": "LGPL-3.0"
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "babelify": "^10.0.0",
+    "bignumber.js": "^4.0.0",
+    "bower": "^1.8.8",
+    "browserify": "^16.5.0",
+    "chai": "^4.2.0",
+    "crypto-js": "^3.1.9-1",
+    "del": "^5.1.0",
+    "exorcist": "^1.0.1",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^6.1.3",
+    "gulp-jshint": "^2.1.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^0.6.1",
+    "gulp-streamify": "^1.0.2",
+    "gulp-uglify": "^3.0.2",
+    "jshint": "^2.11.0",
+    "lerna": "^3.18.3",
+    "mocha": "^6.1.4",
+    "sandboxed-module": "^2.0.3",
+    "vinyl-source-stream": "^2.0.0"
+  }
 }
