--- a/packages/chain3-appchain/package.json
+++ b/packages/chain3-appchain/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "chain3-mc-contract",
-    "version": "1.2.1",
-    "description": "Web3 module to interact with Ethereum smart contracts.",
-    "repository": "https://github.com/ethereum/web3.js/tree/1.x/packages/chain3-mc-contract",
+    "name": "chain3-appchain",
+    "version": "1.0.1",
+    "description": "Chain3 module to interact with MOAC AppChain contracts.",
+    "repository": "https://github.com/MOACChain/chain3/tree/1.x/packages/chain3-appchain",
     "license": "LGPL-3.0",
     "engines": {
         "node": ">=8.0.0"
